Fixed the logo sizing on small displays.

--- a/stylesheets/refactor.css
+++ b/stylesheets/refactor.css
@@ -63,3 +63,7 @@
 .centered {
     text-align: center;
 }
+
+#refactor-logo {
+    max-width: 100%;
+}
